// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Votes > should render correctly > with no votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="Add vote"
      class="dot-button vote-button-add"
      data-tooltip-content="Add vote"
      data-tooltip-id="scrumlr-tooltip"
    >
      <svg
        class="vote-button-add__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16L8 16"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          d="M16 8L16 24"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes > should render correctly > with no votes and disabled voting 1`] = `<div />`;

exports[`Votes > should render correctly > with votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-remove"
      data-tooltip-id="scrumlr-tooltip"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16H8"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
    <button
      aria-label="Multiple votes are not allowed"
      class="dot-button vote-button-add"
      data-tooltip-content="Multiple votes are not allowed"
      data-tooltip-id="scrumlr-tooltip"
      disabled=""
    >
      <svg
        class="vote-button-add__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16L8 16"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          d="M16 8L16 24"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes > should render correctly > with votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="1 vote"
      class="dot-button vote-button-remove"
      data-tooltip-content="1 vote"
      data-tooltip-id="scrumlr-tooltip"
      disabled=""
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16H8"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with no votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="Add vote"
      class="dot-button vote-button-add"
      data-tooltip-content="Add vote"
      data-tooltip-id="scrumlr-tooltip"
    >
      <svg
        class="vote-button-add__icon"
      >
        plus.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with no votes and disabled voting 1`] = `<div />`;

exports[`Votes should render correctly with votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-remove"
      data-tooltip-id="scrumlr-tooltip"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
      >
        minus.svg
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
    <button
      aria-label="Multiple votes are not allowed"
      class="dot-button vote-button-add"
      data-tooltip-content="Multiple votes are not allowed"
      data-tooltip-id="scrumlr-tooltip"
      disabled=""
    >
      <svg
        class="vote-button-add__icon"
      >
        plus.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="1 vote"
      class="dot-button vote-button-remove"
      data-tooltip-content="1 vote"
      data-tooltip-id="scrumlr-tooltip"
      disabled=""
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
      >
        minus.svg
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
  </div>
</div>
`;
